<resources>
    <string name="app_name">BSNAssignment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string-array name="select">
        <item>Admin</item>
        <item>User</item>

    </string-array>


    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>

    <string name="text_hello">Hello,</string>
    <string name="text_title">BSN INFOTECH</string>
    <string name="home">Home</string>
    <string name="admin_login">Admin Login</string>
    <string name="user_login">User Login</string>
    <string name="user_sign_up">User Sign Up</string>
    <string name="_import">Import</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="sign_up">Sign Up</string>
    <string name="feed">Feed</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="login">Login</string>
    <string name="err_field_empty">Field can not be empty</string>
    <string name="already_logged_in">Already Logged In</string>
    <string name="enter_feedback">Enter Feedback</string>
    <string name="submit">Submit</string>
    <string name="see_feed">Show Feedback</string>
    <string name="loading">Loading...</string>
    <string name="network_error">Network Error</string>

</resources>
