<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Account">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_user_login"
                    android:icon="@android:drawable/ic_menu_my_calendar"
                    android:title="@string/user_login" />
                <item
                    android:id="@+id/nav_admin_login"
                    android:icon="@android:drawable/ic_menu_crop"
                    android:title="@string/admin_login" />

                <item
                    android:id="@+id/nav_sign_up"
                    android:icon="@android:drawable/ic_menu_add"
                    android:title="@string/sign_up" />

            </group>
        </menu>
    </item>

    <item android:title="My Activity">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_feed"
                    android:icon="@android:drawable/ic_menu_view"
                    android:title="@string/see_feed" />

                <item
                    android:id="@+id/send_feed"
                    android:icon="@android:drawable/ic_menu_send"
                    android:title="@string/send_feedback" />

            </group>
        </menu>
    </item>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/_import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>


</menu>
